--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "googleapis": "^105.0.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.7",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
